added new tests

--- a/GrammarofTime/SignalAnnotation/Exercises_HMM_segmentation.ipynb
+++ b/GrammarofTime/SignalAnnotation/Exercises_HMM_segmentation.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from hmmlearn import hmm, base\n",
     "import numpy as np\n",
     "import math\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from tools.plot_tools import Cplot"
    ]
   },
   {
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -282,8 +283,8 @@
     }
    ],
    "source": [
-    "plt.plot(s)\n",
-    "plt.plot(Z)\n",
+    "Cplot(s)\n",
+    "Cplot(Z)\n",
     "\n",
     "plt.show()"
    ]
