added string distance methods

--- a/GrammarofTime/SSTS/examples/ssts_examples.ipynb
+++ b/GrammarofTime/SSTS/examples/ssts_examples.ipynb
@@ -432,8 +432,7 @@
     "}\n",
     "\n",
     "matches = gt.ssts(np.array([s, s]), cfg)\n",
-    "figure(figsize=(16, 5)); plot(s);",
-    "axvspan(matches[0][0], matches[0][1], facecolor='green', alpha=0.10);"
+    "figure(figsize=(16, 5)); plot(s);axvspan(matches[0][0], matches[0][1], facecolor='green', alpha=0.10);"
    ]
   },
   {
